// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TS based CJS > GIVEN no plugin options THEN injects version 1`] = `
"/******/ (() => { // webpackBootstrap
/******/ 	"use strict";
/* unused harmony export version */

const version = "0.0.2";

/******/ })()
;"
`;

exports[`TS based CJS > GIVEN versionOrCurrentDate = "current-date" THEN injects current date 1`] = `
"/******/ (() => { // webpackBootstrap
/******/ 	"use strict";
/* unused harmony export version */

const version = "2022-02-01T14:30:30.000Z";

/******/ })()
;"
`;
